[package]
name = "iotasdk"
version = "0.0.1"
edition = "2018"
authors = ["Kumar Anirudha <mail@anirudha.dev>"]
description = "A Swiss Knife for all things IOTA"
license = "Apache-2.0"
repository = "https://github.com/anistark/iotasdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
